--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,8 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "pydantic>=2.10.6",
-    "remi>=2022.7.27",
+    "sid-file-format",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
@@ -22,3 +18,41 @@ dev = [
     "ruff>=0.11.0",
     "taskipy>=1.14.1",
 ]
+
+[project.scripts]
+sid_edit_ui = "sid_edit_ui.application:main"
+
+[tool.uv.sources]
+sid-file-format = { workspace = true }
+
+[tool.uv.workspace]
+members = [
+    "packages/sid-file-format",
+]
+
+[tool.flet]
+# org name in reverse domain name notation, e.g. "com.mycompany".
+# Combined with project.name to build bundle ID for iOS and Android apps
+org = "org.lhutzelmann"
+
+# project display name that is used as an app title on Android and iOS home screens,
+# shown in window titles and about app dialogs on desktop.
+product = "SID Edit UI"
+
+# company name to display in about app dialogs
+company = "lhutzelmann"
+
+# copyright text to display in about app dialogs
+copyright = "Copyright (C) 2025 by the public domain"
+
+[tool.flet.app]
+path = "src"
+
+[tool.taskipy.tasks]
+run_ui = "flet run"
+run_web = "flet run --web --port 8000"
+run_dev = "flet run --web --port 8000 -d -r"
+
+[build-system]
+requires = ["uv_build>=0.8.0,<0.9.0"]
+build-backend = "uv_build"
