--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "nicegui>=2.21.1",
     "pydantic>=2.10.6",
     "sid-file-format",
 ]
